fixing navigation mobile menu

--- a/css/queries.css
+++ b/css/queries.css
@@ -86,6 +86,7 @@ text-align: center;
   }
   .btn-mobile-nav {
   display: block;
+  z-index: 1000;
 }
 .main-nav {
   background-color: #fff;
